UPDATE: readme in english and spanish

--- a/main_english.ipynb
+++ b/main_english.ipynb
@@ -13,7 +13,7 @@
       "metadata": {},
       "source": [
         "\n",
-        "Developed by: Fernanda Avendaño, Diego Quezada and Kevin Reyes.\n"
+        "Developed by: Fernanda Avendaño, Diego Quezada and Kevin Reyes. Team omicron.\n"
       ]
     },
     {
@@ -43,7 +43,7 @@
         "\n",
         " One of the most bizarre and interesting paradoxes of this pandemic has been the massification of the digital nomad concept: a person, generally young, who spends his life traveling and working remotely, sometimes from unusual and paradisiacal places. In the words of the multitude of people who have joined this lifestyle over the last year, the reason is as simple as it is enviable: \"If we have to work online, why not do it from an exotic country? \".\n",
         "\n",
-        " For this part of the workshop, they will have to build a model capable of predicting the price of a digital nomad-oriented travel package based on a series of details such as the destination or itinerary, the hotels and meals included, the flights involved, etc.\n",
+        " We will build a model capable of predicting the price of a digital nomad-oriented travel package based on a series of details such as the destination or itinerary, the hotels and meals included, the flights involved, etc.\n",
         "\n",
         " To access the details of the challenge, enter the following link: [https://www.kaggle.com/c/nomades-digitales/](https://www.kaggle.com/c/nomades-digitales/)\n"
       ]
